# aiofetcher

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
aiofetcher/: __init__.py  __main__.py  fetcher.py
