[tool.poetry]
name = "aiofetcher"
version = "0.1.0"
description = "Fetcher with aiohttp"
authors = ["Dmitry Nesterov <dim.nesterov2015@gmail.com>"]
readme = "README.md"
packages = [{include = "aiofetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
ruff = ">=0.0.261"
pre-commit = ">=3.2.2"

[tool.poetry.scripts]
# working with datasets, markers and queries
aiofetcher = "aiofetcher.__main__:main"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
